--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,5 +1,5 @@
 <script src="https://utteranc.es/client.js"
-        repo="ignisacpe/ignisacpe.github.io"
+        repo="igniscape/igniscape.github.io"
         issue-term="title"
         label="blog"
         theme="dark-blue"
