--- a/layouts/partials/footer_end.html
+++ b/layouts/partials/footer_end.html
@@ -1,3 +1,3 @@
 <a href="/index.xml" target="_blank" rel="noopener noreferrer" title="Follow">
-    <img src="https://rss.com/blog/wp-content/uploads/2019/10/social_style_3_rss-512-1.png" alt="RSS" style="width: 40px; height: 40px;">
+    <img src="/icons/rss.png" alt="RSS" style="width: 40px; height: 40px;">
 </a>
