--- a/layouts/partials/head/head_start.html
+++ b/layouts/partials/head/head_start.html
@@ -1,3 +1,16 @@
 {{ with .OutputFormats.Get "rss" -}}
-{{ printf `<link rel=%q type=%q href=%q title=%q>` .Rel .MediaType.Type .Permalink site.Title | safeHTML }}
+{{ printf `
+<link rel=%q type=%q href=%q title=%q>` .Rel .MediaType.Type .Permalink site.Title | safeHTML }}
 {{ end }}
+
+<script>
+    document.addEventListener('keydown', function (event) {
+        if ((event.metaKey || event.ctrlKey) && event.key === 'k') {
+            let searchField = document.getElementById('search__text');
+            if (searchField) {
+                searchField.focus();
+                event.preventDefault();
+            }
+        }
+    });
+</script>
