--- a/layouts/partials/head/head_start.html
+++ b/layouts/partials/head/head_start.html
@@ -5,12 +5,17 @@
 
 <script>
     document.addEventListener('keydown', function (event) {
-        if ((event.metaKey || event.ctrlKey) && event.key === 'k') {
+        if (event.key === '/') {
             let searchField = document.getElementById('search__text');
             if (searchField) {
                 searchField.focus();
                 event.preventDefault();
             }
         }
+    });
+
+    document.addEventListener('DOMContentLoaded', function () {
+        let searchField = document.getElementById('search__text');
+        searchField.setAttribute('placeholder', 'Type / to search'); // or Control+/
     });
 </script>
